# DivisorSelectionProgressive

./: CMakeLists.txt  Tests-Great-GPU.txt  Tests-bitness.txt  Tests.txt  data.txt  main.cpp  main.cu  maybeusefull.txt  new-results.txt  runGoogleColab.ipynb  tests-greater-32-bit.txt
device/: CMakeLists.txt  main.cu  powers-kernel.h  powers.cu  primes-kernel.h  primes.cu
device/factors/: main.cu
device/factors-specific-bitness/: CMakeLists.txt  main.cu
device/gpu-info/: CMakeLists.txt  main.cu
device/new-test/: CMakeLists.txt  reselection.cu
device/primes/: CMakeLists.txt  primes-kernel.h  primes.cu
device/reselection/: PrimeStack.h  STRANGE-AEU.h  reselection.cu
device/selection/: CMakeLists.txt  selection-kernel.h  selection.cu
device/smooth/: CMakeLists.txt  smooth-kernel.h  smooth.cu
device/threads-test/: CMakeLists.txt  main.cu
host/: CMakeLists.txt  PrimeStack.h  backtracking.cpp  main.cpp  main.txt  powers.cpp  prepare.cpp  primes.cpp  simple-circular-buffer.h
powers/: CMakeLists.txt  generate.cpp  powers-1024-tuples.txt  powers-1024.txt  powers-1536-tuples.txt  powers-1536.txt  powers-2048-tuples.txt  powers-2048.txt  powers-3072-tuples.txt  powers-3072.txt  powers-4096-tuples.txt  powers-4096.txt  powers-6144-tuples.txt  powers-6144.txt  powers-8192-tuples.txt  powers-8192.txt
preparations/: CMakeLists.txt  main.cpp
prime-gen/: CMakeLists.txt  PrimeGenerator  PrimeGenerator-amd64  libprimesieve.so.12  main.cpp
prime-gen-bitness/: CMakeLists.txt  gen34bit.cpp  main.cpp
